first rework